update some margins and paddings

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="public/css/main.css" />
 
-    <title>Spotify UI</title>
+    <title>Music player</title>
 
     <!-- poppins -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -38,21 +38,16 @@
   <body>
     <div class="container grid">
       <aside class="aside">
-        <p class="logo">&#9854;Music player</p>
+        <p class="logo">Music player</p>
 
         <nav class="aside__nav">
           <span class="menu-icon">&#9776;</span>
 
           <ul>
-            <li><a href="">&#9750; Home</a></li>
-            <li><a href="">&#9906; Search</a></li>
-            <li><a href="">&#9834; Library</a></li>
-            <li>
-              <a href=""> <span id="plus">&plus;</span> Create playlist</a>
-            </li>
-            <li>
-              <a href=""> <span id="heart">&hearts;</span> Liked songs</a>
-            </li>
+            <li><a href="">Home</a></li>
+            <li><a href="">Search</a></li>
+            <li><a href="">Liked songs</a></li>
+            <li><a href=""> <span id="plus">&plus;</span> Create playlist</a></li>
           </ul>
         </nav>
       </aside>
