--- a/index.html
+++ b/index.html
@@ -143,7 +143,6 @@
    
 
     <!-- JavaScript file -->
-    <script src="public/js/app.js"></script>
-    <script src="public/js/controls.js"></script>
+    <script src="public/app.min.js"></script>
   </body>
 </html>
