refactoring and made build

--- a/src/index.html
+++ b/src/index.html
@@ -29,11 +29,11 @@
           <span class="menu-icon">&#9776;</span>
 
           <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">Search</a></li>
-            <li><a href="">Liked songs</a></li>
+            <li><a href="" class="link">Home</a></li>
+            <li><a href="" class="link">Search</a></li>
+            <li><a href="" class="link">Liked songs</a></li>
             <li>
-              <a href=""> <span id="plus">&plus;</span> Create playlist</a>
+              <a href="" class="link"> <span id="plus">&plus;</span> Create playlist</a>
             </li>
           </ul>
         </nav>
